# rustebin

./: .gitignore  Cargo.toml  README.md  Rocket.toml
migrations/2021-02-23-173830_create_users/: up.sql
migrations/2021-02-23-174232_create_pastes/: up.sql
src/: main.rs  schema.rs
src/api/: catchers.rs
src/api/routes/: mod.rs  pastes.rs  test.rs  users.rs
src/core/pastes/: entity.rs  mod.rs  orm.rs  repository.rs
src/core/users/: entity.rs  orm.rs  repository.rs
src/utils/: db.rs  errors.rs  mod.rs
