[package]
name = "rustebin"
version = "0.1.0"
authors = ["Max Kuchynskyj <youngrake@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
