[package]
name = "rustebin"
version = "0.1.0"
authors = ["Max Kuchynskyj <youngrake@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
rocket = "0.4.7"
rocket_contrib = { version = "0.4.7", default-features = false, features = ["json"] }
diesel = { version = "1.4.4", features = ["postgres"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
jsonwebtoken = "7.2.0"
slog = "2.5.2"
slog-term = "2.6.0"
slog-async = "2.5.0"
serde = "1.0.123"
serde_json = "1.0.62"
serde_derive = "1.0.123"

[dev-dependencies]
diesel_cli = { version = "1.4.1", default-features = false, features = ["postgres"] }
